# 2D-MMO-Launcher

./: .gitignore  AGENTS.md  CONTENTS.md  MEMORY.md  MIGRATION.md  PROJECT.md  README.md  STATE.md  agents.md  index.html  package-lock.json  package.json  tailwind.config.js
docs/: README.md  architecture.md  catalog.md  database.md  installation-update-repair.md  manifests.md  processes-playtime.md  runners.md  testing-and-git.md  ui.md
docs/archive/: AGENTS-legacy-2026-07.md
docs/decisions/: 0001-manifest-driven-catalog.md  0002-sqlite-local-state.md  0003-runner-resolution-and-umu.md  0004-transactional-remote-update.md  0005-ai-context-documentation.md  0006-remote-official-catalog.md
docs/features/: ravenquest-battleye.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/manifests/: archlight.json  grand-line-adventures.json  medivia.json  pokemmo.json  pokexgames.json  ravenquest.json  zezenia.json
src-tauri/src/: archive.rs  catalog.rs  database.rs  lib.rs  main.rs  managed_runners.rs  runners.rs
src/lib/: tauri.ts
src/types/: manifest.ts
