[package]
name = "two-d-mmo-launcher"
version = "0.1.0"
description = "Launcher extensível para MMORPGs 2D"
authors = ["2D MMO Launcher Contributors"]
edition = "2021"

[lib]
name = "two_d_mmo_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
rfd = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
flate2 = "1"
bzip2 = "0.6"
tar = "0.4"
crc32fast = "1"
zip = "4"
